--- a/test-output/IdoSport.html
+++ b/test-output/IdoSport.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2021-03-02 18:50:20</span>
+					<span class='suite-started-time'>2021-03-02 20:11:28</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 1m 9s+745ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 1m 18s+899ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 1m 9s+745ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 1m 18s+899ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2021-03-02 18:49:10</span> 
+							<span class='panel-lead suite-started-time'>2021-03-02 20:10:09</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2021-03-02 18:50:20</span> 
+							<span class='panel-lead suite-ended-time'>2021-03-02 20:11:28</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,7 +237,7 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='0f98eda0-4648-4ca5-8d4e-e3b3891e28b2'>
+										<li class='collection-item test displayed active pass ' extentid='4b2bbcb0-bd2e-4116-a942-f43a7514914a'>
 											<div class='test-head'>
 												<span class='test-name'>searchProduct </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -245,9 +245,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-03-02 18:49:27</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-03-02 18:49:50</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 23s+149ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-03-02 20:10:27</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-03-02 20:10:40</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 12s+513ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -265,24 +265,24 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:49:27</td>
+																	<td class='timestamp'>20:10:27</td>
 																		<td class='step-name'>Starting test</td>
 																	<td class='step-details'>Start test</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:49:49</td>
+																	<td class='timestamp'>20:10:39</td>
 																		<td class='step-name'>searchProduct</td>
 																	<td class='step-details'>Verify successful</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:49:50</td>
-																	<td class='step-details'><a href='C:\workspace4\IdoSport\test-output\images\2021-03-02-18-49-50.png' data-featherlight='image'><img class='report-img' src='file:///C:\workspace4\IdoSport\test-output\images\2021-03-02-18-49-50.png' /></a></td>
+																	<td class='timestamp'>20:10:40</td>
+																	<td class='step-details'><a href='C:\workspace4\IdoSport\test-output\images\2021-03-02-20-10-40.png' data-featherlight='image'><img class='report-img' src='file:///C:\workspace4\IdoSport\test-output\images\2021-03-02-20-10-40.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:49:50</td>
+																	<td class='timestamp'>20:10:40</td>
 																		<td class='step-name'>Finish test</td>
 																	<td class='step-details'>Finish test</td>
 																</tr>
@@ -293,7 +293,7 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='452a7272-c4d9-49f6-825c-8e6d294d534c'>
+										<li class='collection-item test displayed active pass ' extentid='558a2aef-333e-49c2-b9e4-4ce7f15cdbb4'>
 											<div class='test-head'>
 												<span class='test-name'>getIntoProduct </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -301,9 +301,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-03-02 18:49:50</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-03-02 18:50:18</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 28s+303ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-03-02 20:10:40</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-03-02 20:10:49</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 8s+717ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -321,24 +321,136 @@
 														<tbody>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:49:50</td>
+																	<td class='timestamp'>20:10:40</td>
 																		<td class='step-name'>Starting test</td>
 																	<td class='step-details'>Start test</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:50:17</td>
+																	<td class='timestamp'>20:10:48</td>
 																		<td class='step-name'>getIntoProduct</td>
 																	<td class='step-details'>Verify successful</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:50:18</td>
-																	<td class='step-details'><a href='C:\workspace4\IdoSport\test-output\images\2021-03-02-18-50-18.png' data-featherlight='image'><img class='report-img' src='file:///C:\workspace4\IdoSport\test-output\images\2021-03-02-18-50-18.png' /></a></td>
+																	<td class='timestamp'>20:10:49</td>
+																	<td class='step-details'><a href='C:\workspace4\IdoSport\test-output\images\2021-03-02-20-10-49.png' data-featherlight='image'><img class='report-img' src='file:///C:\workspace4\IdoSport\test-output\images\2021-03-02-20-10-49.png' /></a></td>
 																</tr>
 																<tr>
 																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
-																	<td class='timestamp'>18:50:18</td>
+																	<td class='timestamp'>20:10:49</td>
+																		<td class='step-name'>Finish test</td>
+																	<td class='step-details'>Finish test</td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='6cbe961f-5368-4a08-8b41-66b247a01720'>
+											<div class='test-head'>
+												<span class='test-name'>editProduct </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide '></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-03-02 20:10:49</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-03-02 20:10:50</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 1s+153ms</span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																	<th>StepName</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>20:10:49</td>
+																		<td class='step-name'>Starting test</td>
+																	<td class='step-details'>Start test</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>20:10:49</td>
+																		<td class='step-name'>editProduct</td>
+																	<td class='step-details'>Verify successful</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>20:10:50</td>
+																	<td class='step-details'><a href='C:\workspace4\IdoSport\test-output\images\2021-03-02-20-10-50.png' data-featherlight='image'><img class='report-img' src='file:///C:\workspace4\IdoSport\test-output\images\2021-03-02-20-10-50.png' /></a></td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>20:10:50</td>
+																		<td class='step-name'>Finish test</td>
+																	<td class='step-details'>Finish test</td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='740018a8-953c-47c6-ae12-665fc423cff0'>
+											<div class='test-head'>
+												<span class='test-name'>addToCart </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide '></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-03-02 20:10:50</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-03-02 20:11:27</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 37s+305ms</span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																	<th>StepName</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>20:10:50</td>
+																		<td class='step-name'>Starting test</td>
+																	<td class='step-details'>Start test</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>20:11:27</td>
+																		<td class='step-name'>addToCart</td>
+																	<td class='step-details'>Verify successful</td>
+																</tr>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>20:11:27</td>
+																	<td class='step-details'><a href='C:\workspace4\IdoSport\test-output\images\2021-03-02-20-11-27.png' data-featherlight='image'><img class='report-img' src='file:///C:\workspace4\IdoSport\test-output\images\2021-03-02-20-11-27.png' /></a></td>
+																</tr>
+																<tr>
+																	<td class='status info' title='info' alt='info'><i class='mdi-action-info-outline'></i></td>
+																	<td class='timestamp'>20:11:27</td>
 																		<td class='step-name'>Finish test</td>
 																	<td class='step-details'>Finish test</td>
 																</tr>
