--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\hagai\AppData\Local\Temp\testng-eclipse-807364436\testng-customsuite.xml</span>
+                    <span>C:\Users\hagai\AppData\Local\Temp\testng-eclipse-415480607\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,6 +102,16 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.SanityBuyProduct" hash-for-method="addToCart">addToCart</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.SanityBuyProduct" hash-for-method="editProduct">editProduct</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.SanityBuyProduct" hash-for-method="getIntoProduct">getIntoProduct</a> <!-- method navigator-link -->
@@ -132,6 +142,24 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="addToCart">
+                  </a> <!-- addToCart -->
+                  <span class="method-name">addToCart</span>
+                  <em>
+(verify date)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="editProduct">
+                  </a> <!-- editProduct -->
+                  <span class="method-name">editProduct</span>
+                  <em>
+(verify date)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="getIntoProduct">
                   </a> <!-- getIntoProduct -->
                   <span class="method-name">getIntoProduct</span>
@@ -153,7 +181,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\hagai\AppData\Local\Temp\testng-eclipse-807364436\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\hagai\AppData\Local\Temp\testng-eclipse-415480607\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -202,20 +230,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getIntoProduct')
+data.setCell(0, 1, 'addToCart')
 data.setCell(0, 2, 'tests.SanityBuyProduct')
-data.setCell(0, 3, 27253);
+data.setCell(0, 3, 36651);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'searchProduct')
 data.setCell(1, 2, 'tests.SanityBuyProduct')
-data.setCell(1, 3, 11420);
+data.setCell(1, 3, 11498);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'getIntoProduct')
+data.setCell(2, 2, 'tests.SanityBuyProduct')
+data.setCell(2, 3, 8085);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'editProduct')
+data.setCell(3, 2, 'tests.SanityBuyProduct')
+data.setCell(3, 3, 454);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 38 seconds</span>
+              <span class="suite-total-time">Total running time: 56 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -248,31 +284,55 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod(public void tests.SanityBuyProduct.searchProduct() throws java.lang.InterruptedException,java.io.IOE...)</span>
-                <span class="method-start">16939 ms</span>
+                <span class="method-start">18362 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">searchProduct</span>
-                <span class="method-start">16976 ms</span>
+                <span class="method-start">18388 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod([TestResult name=searchProduct status=SUCCESS method=SanityBuyProduct.searchProduct()[pri:1, instanc...)</span>
-                <span class="method-start">28405 ms</span>
+                <span class="method-start">29894 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod(public void tests.SanityBuyProduct.getIntoProduct() throws java.lang.InterruptedException,java.io.IO...)</span>
-                <span class="method-start">40132 ms</span>
+                <span class="method-start">30910 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">getIntoProduct</span>
-                <span class="method-start">40133 ms</span>
+                <span class="method-start">30911 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod([TestResult name=getIntoProduct status=SUCCESS method=SanityBuyProduct.getIntoProduct()[pri:2, insta...)</span>
-                <span class="method-start">67390 ms</span>
+                <span class="method-start">38998 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod(public void tests.SanityBuyProduct.editProduct() throws java.lang.InterruptedException,java.io.IOExc...)</span>
+                <span class="method-start">39639 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">editProduct</span>
+                <span class="method-start">39640 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod([TestResult name=editProduct status=SUCCESS method=SanityBuyProduct.editProduct()[pri:3, instance:te...)</span>
+                <span class="method-start">40097 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod(public void tests.SanityBuyProduct.addToCart() throws java.lang.InterruptedException,java.io.IOExcep...)</span>
+                <span class="method-start">40795 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">addToCart</span>
+                <span class="method-start">40795 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod([TestResult name=addToCart status=SUCCESS method=SanityBuyProduct.addToCart()[pri:4, instance:tests....)</span>
+                <span class="method-start">77449 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">68438 ms</span>
+                <span class="method-start">78101 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
