--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,20 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dbdac1">  <td>21/03/02 18:49:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityBuyProduct.beforeClass()[pri:0, instance:tests.SanityBuyProduct@6771beb3]">&gt;&gt;beforeClass</td> 
+<tr bgcolor="dbdac1">  <td>21/03/02 20:10:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityBuyProduct.beforeClass()[pri:0, instance:tests.SanityBuyProduct@6771beb3]">&gt;&gt;beforeClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="dbdac1">  <td>21/03/02 18:49:27</td>   <td>16931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityBuyProduct.beforeMethod(java.lang.reflect.Method)[pri:0, instance:tests.SanityBuyProduct@6771beb3]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="dbdac1">  <td>21/03/02 20:10:27</td>   <td>18354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityBuyProduct.beforeMethod(java.lang.reflect.Method)[pri:0, instance:tests.SanityBuyProduct@6771beb3]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="dbdac1">  <td>21/03/02 18:49:27</td>   <td>16955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBuyProduct.searchProduct()[pri:1, instance:tests.SanityBuyProduct@6771beb3]">searchProduct</td> 
+<tr bgcolor="dbdac1">  <td>21/03/02 20:10:27</td>   <td>18371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBuyProduct.searchProduct()[pri:1, instance:tests.SanityBuyProduct@6771beb3]">searchProduct</td> 
   <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="dbdac1">  <td>21/03/02 18:49:38</td>   <td>28384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityBuyProduct.afterMethod(org.testng.ITestResult)[pri:0, instance:tests.SanityBuyProduct@6771beb3]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="dbdac1">  <td>21/03/02 20:10:39</td>   <td>29878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityBuyProduct.afterMethod(org.testng.ITestResult)[pri:0, instance:tests.SanityBuyProduct@6771beb3]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="dbdac1">  <td>21/03/02 18:49:50</td>   <td>40112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityBuyProduct.beforeMethod(java.lang.reflect.Method)[pri:0, instance:tests.SanityBuyProduct@6771beb3]">&gt;&gt;beforeMethod</td> 
+<tr bgcolor="dbdac1">  <td>21/03/02 20:10:40</td>   <td>30893</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityBuyProduct.beforeMethod(java.lang.reflect.Method)[pri:0, instance:tests.SanityBuyProduct@6771beb3]">&gt;&gt;beforeMethod</td> 
 <td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="dbdac1">  <td>21/03/02 18:49:50</td>   <td>40112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBuyProduct.getIntoProduct()[pri:2, instance:tests.SanityBuyProduct@6771beb3]">getIntoProduct</td> 
+<tr bgcolor="dbdac1">  <td>21/03/02 20:10:40</td>   <td>30894</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBuyProduct.getIntoProduct()[pri:2, instance:tests.SanityBuyProduct@6771beb3]">getIntoProduct</td> 
   <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="dbdac1">  <td>21/03/02 18:50:17</td>   <td>67371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityBuyProduct.afterMethod(org.testng.ITestResult)[pri:0, instance:tests.SanityBuyProduct@6771beb3]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="dbdac1">  <td>21/03/02 20:10:48</td>   <td>38981</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityBuyProduct.afterMethod(org.testng.ITestResult)[pri:0, instance:tests.SanityBuyProduct@6771beb3]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
-<tr bgcolor="dbdac1">  <td>21/03/02 18:50:18</td>   <td>68419</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityBuyProduct.afterClass()[pri:0, instance:tests.SanityBuyProduct@6771beb3]">&lt;&lt;afterClass</td> 
+<tr bgcolor="dbdac1">  <td>21/03/02 20:10:49</td>   <td>39623</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityBuyProduct.beforeMethod(java.lang.reflect.Method)[pri:0, instance:tests.SanityBuyProduct@6771beb3]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
+<tr bgcolor="dbdac1">  <td>21/03/02 20:10:49</td>   <td>39623</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBuyProduct.editProduct()[pri:3, instance:tests.SanityBuyProduct@6771beb3]">editProduct</td> 
+  <td>main@330739404</td>   <td></td> </tr>
+<tr bgcolor="dbdac1">  <td>21/03/02 20:10:49</td>   <td>40080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityBuyProduct.afterMethod(org.testng.ITestResult)[pri:0, instance:tests.SanityBuyProduct@6771beb3]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
+<tr bgcolor="dbdac1">  <td>21/03/02 20:10:50</td>   <td>40778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SanityBuyProduct.beforeMethod(java.lang.reflect.Method)[pri:0, instance:tests.SanityBuyProduct@6771beb3]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
+<tr bgcolor="dbdac1">  <td>21/03/02 20:10:50</td>   <td>40778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SanityBuyProduct.addToCart()[pri:4, instance:tests.SanityBuyProduct@6771beb3]">addToCart</td> 
+  <td>main@330739404</td>   <td></td> </tr>
+<tr bgcolor="dbdac1">  <td>21/03/02 20:11:27</td>   <td>77433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityBuyProduct.afterMethod(org.testng.ITestResult)[pri:0, instance:tests.SanityBuyProduct@6771beb3]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
+<tr bgcolor="dbdac1">  <td>21/03/02 20:11:27</td>   <td>78085</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SanityBuyProduct.afterClass()[pri:0, instance:tests.SanityBuyProduct@6771beb3]">&lt;&lt;afterClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@330739404</td>   <td></td> </tr>
 </table>
